<resources>
    <string name="app_name">CV</string>
    <string name="student">Student</string>
    <string name="davor">Davor Lukić</string>
    <string name="descriptionAboutMeText">In 2001 I started going to college. I studied Psychology, but I haven`t finished. I decided that it wasn\'t the right path for me so I dropped out. I wanted to get a job and start to earn money, to be independent. Unfortunately, that didn\'t happen. After a few years, I finally found a job. However, it was only a part time job so I couldn’t earn much, but it was enough to get by. After a while, I started thinking what next. I was wondering what my dream job might be, what and where I would like to work. So, it finally hit me. I have always loved computer science and I am a huge fan of electronics. I maintain and repair my neighbors’ computers all the time. I know basic programing and I wanted to learn more. So, here I am. I am a third year student of Electrical Engineering and Computing, working part-time, a husband and a father to a daughter. It\'s quite demanding but, with love and help of my family, I manage. I never thought it would be easy, and believe me, it surely isn\'t.</string>
    <string name="aboutMeDescriptionText">My name is Davor Lukić and I am 35 years old. I was born in Požega, but now I live in Našice. Most of my childhood I spent in Čaglin, where I lived with my family. There, I finished primary school. I moved to Našice in 1997 when I started my high school education. I finished gymnasium. My majors were Math, Science and Physics. In 2001 I started going to college. I studied Psychology, but I haven`t finished. I decided that it wasn\'t the right path for me so I dropped out. I wanted to get a job and start to earn money, to be independent. Unfortunately, that didn\'t happen. After a few years, I finally found a job. However, it was only a part time job so I couldn’t earn much, but it was enough to get by. After a while, I started thinking what next. I was wondering what my dream job might be, what and where I would like to work. So, it finally hit me. I have always loved computer science and I am a huge fan of electronics. I maintain and repair my neighbors’ computers all the time. I know basic programing and I wanted to learn more. So, here I am. I am a third year student of Electrical Engineering and Computing, working part-time, a husband and a father to a daughter. It\'s quite demanding but, with love and help of my family, I manage. I never thought it would be easy, and believe me, it surely isn\'t.</string>
    <string name="aboutHeadingText">About me</string>
    <string name="educationDescriptionText">The educational process consists of three levels with study programmes being continually upgraded and harmonised with recent scientific discoveries, economy and labour market needs. Cooperation with the economy, encouragement of entrepreneurship and transfer of knowledge and technologies are fundamental indicators of the Faculty’s development.The Faculty successfully cooperates with the most important electrical engineering and ICT companies. Furthermore, in collaboration with the economy, professional and development projects, studies and elaborations are carried out.</string>
    <string name="institutionText">The Faculty of Electrical Engineering, Computer Science and Information Technology Osijek</string>
    <string name="educationHeadingText">Education</string>
    <string name="mobileText">Mobile: 091 516 6967</string>
    <string name="mailText">mail: davor.lukic@etfos.hr</string>
    <string name="webText">web: www.dlukic.ml</string>
    <string name="gitText">gitHub: https://github.com/beschtia</string>
    <string name="dateText">2016 - today</string>
</resources>
