<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/colorHeaderBackground">

            <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="90dp"
                android:layout_height="120dp"
                android:layout_margin="@dimen/marginLarge"
                android:src="@drawable/avatar"
                />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHeaderText"
                android:text="@string/davor"
                android:layout_marginTop="@dimen/marginLarge"
                android:layout_toEndOf="@id/ivProfileImage"/>

            <TextView
                android:id="@+id/tvPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHeaderText"
                android:text="@string/student"
                android:layout_toEndOf="@id/ivProfileImage"
                android:layout_below="@id/tvName"/>

            <TextView
                android:id="@+id/mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHeaderText"
                android:text="@string/mobileText"
                android:layout_toEndOf="@id/ivProfileImage"
                android:layout_below="@id/tvPosition"/>

            <TextView
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHeaderText"
                android:text="@string/mailText"
                android:layout_toEndOf="@id/ivProfileImage"
                android:layout_below="@+id/mobile"/>

            <TextView
                android:id="@+id/web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHeaderText"
                android:text="@string/webText"
                android:layout_toEndOf="@id/ivProfileImage"
                android:layout_below="@+id/mail"/>

            <TextView
                android:id="@+id/git"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHeaderText"
                android:text="@string/gitText"
                android:layout_toEndOf="@id/ivProfileImage"
                android:layout_below="@+id/web"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/aboutHeading"
            style="@style/HeadingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutHeadingText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <TextView
            android:id="@+id/aboutDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DescriptionTextView"
            android:text="@string/aboutMeDescriptionText"
            app:layout_constraintTop_toBottomOf="@id/aboutHeading"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/educationHeading"
            style="@style/HeadingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/educationHeadingText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutDescription" />

        <TextView
            android:id="@+id/institution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/educationHeading"
            style="@style/PositionTextView"
            android:text="@string/institutionText"
            />

        <TextView
            android:id="@+id/educationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/institution"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/dateText"
            style="@style/PositionTextView"
            android:textColor="@color/colorHeading"/>

        <TextView
            android:id="@+id/educationDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DescriptionTextView"
            android:text="@string/educationDescriptionText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/educationDate"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>